# test_repository_for_rental_store_RESTinstance

./: .gitignore  README.md  pyproject.toml  requirements.txt
atest/: film_1.json  rent_request_1.json  rental_store_tests.robot  return_request_1.json
results/: log.html  output.xml  report.html
